--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>org.example</groupId>
     <artifactId>hotel-booking-saga-orchestration</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>common</module>
+    </modules>
     <packaging>pom</packaging>
     <name>Hotel Booking - Saga Orchestration</name>
     <description>Multi-module Spring Boot project demonstrating Saga Orchestration Pattern</description>
