--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>common</module>
         <module>hotel-service</module>
         <module>payment-service</module>
+        <module>booking-service</module>
     </modules>
     <packaging>pom</packaging>
     <name>Hotel Booking - Saga Orchestration</name>
