--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>hotel-service</module>
         <module>payment-service</module>
         <module>booking-service</module>
+        <module>integration-tests</module>
     </modules>
     <packaging>pom</packaging>
     <name>Hotel Booking - Saga Orchestration</name>
